添加子模块

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <h2>ng-demo</h2>
+<nav>
+  <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" >home</a>
+  <a routerLink="/dashboard" routerLinkActive="active">hero demo</a>
+  <a routerLink="/todo" routerLinkActive="active">todo demo</a>
+  <a routerLink="/crisis" routerLinkActive="active">cirisis demo</a>
+</nav>
 <router-outlet></router-outlet>
