--- a/src/app/heroes/hero-list/hero-list.component.html
+++ b/src/app/heroes/hero-list/hero-list.component.html
@@ -1,4 +1,4 @@
-<h2>My Heroes</h2>
+<h2>HEROES</h2>
 <div>
   <label>Hero name:
     <input #heroName />
@@ -9,7 +9,7 @@
 </div>
 <ul class="heroes">
   <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero">
-    <a routerLink="/detail/{{hero.id}}"><span class="badge">{{hero.id}}</span> {{hero.name}}</a>
+    <a routerLink="/crisis/hero/{{hero.id}}"><span class="badge">{{hero.id}}</span> {{hero.name}}</a>
     <button class="delete" title="delete hero" (click)="delete(hero)">x</button>
   </li>
 </ul>
